--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Rishabh Luthra</h1>
+<p>This is my website, hosted on Github Pages</p>
 </body>
 </html>
