--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,10 @@
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="Title">
+            <section>
                 <h1>RishabhL | My Website</h1>
-            </div>
-            <div class="TitleDesc">
                 <h2>Email, Github etc. No phone number though</h2>
-            </div>
+            </section>
         </header>
     </body>
 </html>
