--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>RishabhL | My Website</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header class="Main">
@@ -17,12 +19,16 @@
                     <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="Title">
+            <section id="Title">
                 <h1>RishabhL | My Website</h1>
-            </div>
-            <div class="TitleDesc">
                 <h2>Still under development, check back later for any updates</h2>
-            </div>
+                <ul>
+                    <li><a href="#scroll">Scroll Down</a></li>
+                </ul>
+            </section>
+            <section id="scroll">
+                <h1>Scroll Test</h1>
+            </section>
         </header>
     </body>
 </html>
