--- a/about.html
+++ b/about.html
@@ -17,12 +17,10 @@
                     <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="Title">
+            <section>
                 <h1>RishabhL | My Website</h1>
-            </div>
-            <div class="TitleDesc">
                 <h2>Just a few things about me, nothing personal</h2>
-            </div>
+            </section>
         </header>
     </body>
 </html>
