--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             </section>
             <section id="scroll">
                 <h1>Scroll Test</h1>
+                <ul>
+                    <li><a href="#Title">Scroll Up</a></li>
+                </ul>
             </section>
         </header>
     </body>
