Implement Parallax Effect

--- a/index.html
+++ b/index.html
@@ -1,37 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>RishabhL | My Website</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <header class="Main">
-            <div class="Logo">
-                <h1>RL</h1>
-            </div>
-            <nav class="Navigation">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contacts</a></li>
-                </ul>
-            </nav>
-            <section id="Title">
-                <h1>RishabhL | My Website</h1>
-                <h2>Still under development, check back later for any updates</h2>
-                <ul>
-                    <li><a href="#scroll">Scroll Down</a></li>
-                </ul>
-            </section>
-            <section id="scroll">
-                <h1>Scroll Test</h1>
-                <ul>
-                    <li><a href="#Title">Scroll Up</a></li>
-                </ul>
-            </section>
-        </header>
-    </body>
+<head>
+    <title>RishabhL | My Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="Navigation">
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+    </nav>
+    <div class="img1">
+        <div class="text">
+            <span class="border">
+                RishabhL | My Website
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-light">
+        <h2>Coming Soon</h2>
+        <p>
+            This website is still under development. Check back later for any updates.
+        </p>
+    </section>
+
+    <div class="img2">
+        <div class="text">
+            <span class="border trans">
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <h2>Section Two</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis provident quas eos fugit? Doloribus quas tempora fugit officiis, cumque veniam! Praesentium eveniet, minus provident fugit impedit quas omnis reprehenderit qui et natus voluptatem quod ducimus harum voluptates molestias doloribus fuga, porro ut alias consequuntur. Dolore eveniet numquam, aspernatur omnis dolorem facere quibusdam officiis ea minus veritatis nisi suscipit sequi veniam et quod placeat incidunt? Magni vitae natus in ex ipsam repudiandae quasi ad doloribus error dolore iste, voluptates optio dicta sequi quaerat rem corrupti. Iste, eos itaque eum incidunt aliquam obcaecati nesciunt voluptate nostrum dolore neque atque perferendis sequi deleniti.
+        </p>
+    </section>
+
+    <div class="img3">
+        <div class="text">
+            <span class="border trans">
+
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <h2>Section Three</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis provident quas eos fugit? Doloribus quas tempora fugit officiis, cumque veniam! Praesentium eveniet, minus provident fugit impedit quas omnis reprehenderit qui et natus voluptatem quod ducimus harum voluptates molestias doloribus fuga, porro ut alias consequuntur. Dolore eveniet numquam, aspernatur omnis dolorem facere quibusdam officiis ea minus veritatis nisi suscipit sequi veniam et quod placeat incidunt? Magni vitae natus in ex ipsam repudiandae quasi ad doloribus error dolore iste, voluptates optio dicta sequi quaerat rem corrupti. Iste, eos itaque eum incidunt aliquam obcaecati nesciunt voluptate nostrum dolore neque atque perferendis sequi deleniti.
+        </p>
+    </section>
+
+    <div class="img1">
+        <div class="text">
+            <span class="border">
+                RishabhL | My Website
+            </span>
+        </div>
+    </div>
+</body>
 </html>
